# limestone

./: .gitignore  README.md  pyproject.toml  references.txt  setup.py
goombay/: __init__.py  benchmarks.py  utils.py
goombay/algorithms/: base.py  editdistance.py
limestone/: __init__.py  benchmarks.py  editdistance.py  textdistance.py
limestone/algorithms/: __init__.py  base.py  editdistance.py
src/limestone/: __init__.py  textdistance.py
tests/: test_Gotoh.py  test_GotohLocal.py  test_Hamming.py  test_Hirschberg.py  test_Jaro.py  test_JaroWinkler.py  test_LCS.py  test_LowranceWagner.py  test_SCS.py  test_SmithWaterman.py  test_WagnerFischer.py  test_WatermanSmithBayer.py  test_WatermanSmithBeyer.py  test_levenshtein.py  test_needlemanwunsch.py  test_textdistance.py
