[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goombay"
version = "0.13.0"
authors = [
	{ name ="Andrew Hennis", email="andrew.mr.hennis@gmail.com" },
]
desctiption = "Simple python implementation of text alignment meant for increased functionality."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 2.0.0"
]

[project.urls]
Homepage = "https://github.com/dawnandrew100/goombay"
Issues = "https://github.com/dawnandrew100/goombay/issues"
